
=== Removed

* [distro]: **Apiman is no longer distributed with the Keycloak Server Overlay**, as this has been discontinued by the Keycloak team. You will need to point Apiman to a Keycloak server that is run separately (see the Docker Compose distro for examples). By https://github.com/msavy[Marc Savy (@msavy)^].


* [distro]: Apiman Manager API **no longer supports Elasticsearch as a backend store**, this is now RDBMS/SQL only. We still maintain full support for Elasticsearch for metrics/analytics. Consequently, we have removed `ESStorage` and associated code. See: https://github.com/apiman/apiman/discussions/1365[AEP 2: Drop Elasticsearch as Manager API database in Apiman 3 (keep for metrics, gateway, etc)^]. By https://github.com/msavy[Marc Savy (@msavy)^].


* [distro]: Java 8 is no longer supported in the community project.

=== Fixed

* [ui]: Fixed a wide variety of glitches afflicting the Apiman Manager UI. By https://github.com/msavy[Marc Savy (@msavy)^], https://github.com/volkflo[Florian Volk (@volkflo)^].


* [manager-api-war]: handle comma-separated lists properly in `apiman.properties`. By https://github.com/msavy[Marc Savy (@msavy)^] in https://github.com/apiman/apiman/pull/2012


* [common-es]: work around ES index creation race condition. By https://github.com/msavy[Marc Savy (@msavy)^] in https://github.com/apiman/apiman/pull/2037


* [ui]: browser back button on "all"-pages. By https://github.com/volkflo[Florian Volk (@volkflo)^] in https://github.com/apiman/apiman/pull/2005


* [manager-api]: client republish and/or unregister when breaking contracts. By https://github.com/msavy[Marc Savy (@msavy)^] in https://github.com/apiman/apiman/pull/2123


* [manager-api]: ensures `RestExceptionMapper` actually prints stack trace. By https://github.com/msavy[Marc Savy (@msavy)^]


* [gateway-engine-policies]: check for null request path in URLRewritingPolicy. By https://github.com/msavy[Marc Savy (@msavy)^]

